"Mark as doubt"

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <button id="toolPp" class="btn" onclick="setDrawTool('point_pp')" style="border-left:5px solid #ff9500">🟠 Pp</button>
             <button id="toolCircle" class="btn" onclick="setDrawTool('circle_auto')" style="border-left:5px solid #555">⭕ Auto</button>
             <div style="width:1px; height:20px; background:#ccc; margin:0 5px;"></div>
-            <button id="btnMarkDoubt" class="btn btn-mark-doubt" onclick="markSelectedAsDoubt()" style="display:none;">❓ Mark Doubt</button>
+            <button id="btnMarkDoubt" class="btn btn-mark-doubt" onclick="markSelectedAsDoubt()" style="display:none;">❓ Mark as doubt</button>
             <button id="btnDelete" class="btn btn-red" onclick="deleteSelected()" style="display:none;">🗑️ Delete</button>
             <button class="btn" onclick="undo()" id="btnUndo">↩ Undo</button>
             <button class="btn" onclick="redo()" id="btnRedo">↪ Redo</button>
